# mju_sso_login_test

./: README.md  debug_page.html  mju_login.py  mju_login_with_selenium.py  mju_login_with_seleniumv2.py  mju_loginv5.py  mju_sso_login.bak2.py  mju_sso_login.bak3.py  mju_sso_login.py  pyproject.toml
doc/: mju_login.md
mju_login/: index.js.다운로드  login.css  password.change.delay.js.다운로드  password.change.form.js.다운로드
mju_myiweb/: MyLocationPage.html  Sug00Svl07getTimeTable.html  base.css  common(1).js  common(2).js  common.css  common_ko.css  crownix-viewer.min.css  jquery-ui.min.js  jquery.blockUI.js  jquery.bxslider.js  jquery.mCustomScrollbar.js  jquery.simplemodal-1.4.4.js  normalize.css  responsive.css  site_contents_Desktop.css  site_user.js  style(1).css  style(2).css  style.css  style_common_Desktop.css  sweetalert2-custom.js  top.css  view.html  명지대학교 학생정보시스템.html
mju_myiweb_student_page_beofore/: 명지대학교 학생정보시스템.html
myiweb/: README.md  __init__.py  __main__.py  abc.py  architecture.md  client.py  crypto.py  examples.py  exceptions.py  main.py  sso.py  student_card.py  student_changelog.py  utils.py
myiweb_logger/: README.md  crypto.py  examples.py  login_process.md  main.py  sso.py  student_card.py  utils.py
test/: cookie.md  main.py  mju_login_with_seleniumv2.py  mju_login_with_seleniumv3.py  mju_loginv2.py  mju_loginv3.py  mju_loginv4.py  mju_sso_login.md
명지대학교 통합로그인_files/: bandi.lib.common.js.다운로드  find.form.js.다운로드  forge.min.js.다운로드  modal.css  pdf-guide.css  pdf-guide.js.다운로드  pdf.init.js.다운로드  remember.me.js.다운로드  sign.form.js.다운로드  (+2 more)
(+7 files in other folders)
